minikube/demo-project-with-an-ingress/webapp-with-an-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-with-an-ingress
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
```
apiVersion: v1
kind: Service
metadata:
  name: webapp-with-an-ingress-service
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
