minikube/demo-project-with-an-ingress/ingress-webapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: webapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-with-an-ingress-service
                port:
                  number: 8080
